Fix G-menu portrait alignment and Unknown-name formatting (#43)
* fix: render character portraits as font-independent sprite grids

* fix: preserve sprite row bounds and format unknown character names